feat: Setup signIn method to confirm message, send back JWT & Test

--- a/packages/web3-website-token-gate-api/template.yml
+++ b/packages/web3-website-token-gate-api/template.yml
@@ -43,7 +43,7 @@ Resources:
           Type: Api
           Properties:
             Path: /signIn
-            Method: GET # TODO: Change to POST
+            Method: POST
   UserHasAccessFunction:
     Type: AWS::Serverless::Function
     Metadata:
