--- a/packages/web3-website-token-gate-api/package.json
+++ b/packages/web3-website-token-gate-api/package.json
@@ -4,12 +4,15 @@
   "description": "web3-website-token-gate-api",
   "private": true,
   "dependencies": {
+    "ethers": "^5.5.3",
+    "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
     "@types/aws-lambda": "^8.10.72",
     "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^14.14.26",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
@@ -20,5 +23,5 @@
     "build": "node_modules/typescript/bin/tsc",
     "watch": "node_modules/typescript/bin/tsc -w --preserveWatchOutput",
     "test": "jest"
-  } 
+  }
 }
