--- a/packages/web-script/package.json
+++ b/packages/web-script/package.json
@@ -59,6 +59,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.5.4",
+    "watch": "^1.0.2",
     "web-vitals": "^2.1.2",
     "web3modal": "^1.9.4",
     "webpack": "^5.64.4",
@@ -69,6 +70,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build:watch": "watch 'yarn build' ./src",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
