--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "web3-website-token-gate-api",
-  "version": "1.0.0",
-  "description": "web3-website-token-gate-api",
-  "private": true,
+  "name": "web3-gating-api",
+  "description": "Api for signing in to web3 gating websites",
+  "version": "0.1.0",
+  "scripts": {
+    "offline": "serverless offline",
+    "start": "watch 'yarn offline' ./src",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@tsconfig/node14": "^1.0.1",
+    "@types/aws-lambda": "^8.10.61",
+    "@types/jest": "^26.0.14",
+    "@types/jsonwebtoken": "^8.5.6",
+    "jest": "^27.4.7",
+    "serverless": "^2.70.0",
+    "serverless-offline": "^8.3.1",
+    "serverless-plugin-typescript": "^2.1.0",
+    "ts-jest": "^27.1.2",
+    "typescript": "^3.9.7",
+    "watch": "^1.0.2"
+  },
   "dependencies": {
     "axios": "^0.24.0",
     "ethers": "^5.5.3",
-    "jsonwebtoken": "^8.5.1",
-    "source-map-support": "^0.5.19"
-  },
-  "devDependencies": {
-    "@tsconfig/node14": "^1.0.0",
-    "@types/aws-lambda": "^8.10.72",
-    "@types/jest": "^26.0.20",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/node": "^14.14.26",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.1",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.5"
-  },
-  "scripts": {
-    "build": "node_modules/typescript/bin/tsc",
-    "watch": "node_modules/typescript/bin/tsc -w --preserveWatchOutput",
-    "test": "jest"
+    "jsonwebtoken": "^8.5.1"
   }
 }
