--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,8 +3,7 @@
   "description": "Api for signing in to web3 gating websites",
   "version": "0.1.0",
   "scripts": {
-    "offline": "serverless offline",
-    "start": "watch 'yarn offline' ./src",
+    "start": "serverless offline",
     "test": "jest"
   },
   "devDependencies": {
@@ -17,8 +16,7 @@
     "serverless-offline": "^8.3.1",
     "serverless-plugin-typescript": "^2.1.0",
     "ts-jest": "^27.1.2",
-    "typescript": "^3.9.7",
-    "watch": "^1.0.2"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "axios": "^0.24.0",
