--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "start": "serverless offline",
+    "deploy": "serverless deploy",
     "test": "jest"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "ethers": "^5.5.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "source-map-support": "^0.5.21"
   }
 }
