--- a/packages/site-injection-app/tsconfig.json
+++ b/packages/site-injection-app/tsconfig.json
@@ -6,9 +6,10 @@
       "dom.iterable",
       "esnext"
     ],
+    "esModuleInterop": true,
+    "sourceMap": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
