fix: revert TS changes, downgrade both package to 3.x
Typescript v4 caused issues with serverless, spent a bit of time but
really didn't feel worth getting past it. Better to have them both
the same version so there aren't different rules around things like
the typing of catch (e).

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,20 +1,10 @@
 {
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
-    "lib": ["es2020"],
-    "target": "es2020",
-    "esModuleInterop": true,
     "sourceMap": true,
     "allowJs": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "checkJs": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
     "outDir": "./dist",
     "rootDir": "./src"
   },
