--- a/packages/site-injection-app/tsconfig.json
+++ b/packages/site-injection-app/tsconfig.json
@@ -6,10 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
-    "esModuleInterop": true,
-    "sourceMap": true,
     "allowJs": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -19,7 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react"
   },
   "include": [
     "src"
