--- a/packages/site-injection-app/package.json
+++ b/packages/site-injection-app/package.json
@@ -84,7 +84,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": 0
+    }
   },
   "browserslist": {
     "production": [
