--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,7 +3,7 @@
   "description": "Api for signing in to web3 gating websites",
   "version": "0.1.0",
   "scripts": {
-    "start": "serverless offline",
+    "start": "serverless offline --httpPort 3001",
     "deploy": "serverless deploy",
     "test": "jest"
   },
