--- a/packages/notion-nextjs/package.json
+++ b/packages/notion-nextjs/package.json
@@ -29,9 +29,11 @@
     "@google-cloud/firestore": "^4.10.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
+    "ethers": "^5.5.3",
     "fathom-client": "^3.0.0",
     "got": "^11.8.2",
     "isomorphic-unfetch": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "lqip-modern": "^1.2.0",
     "next": "^11.1.2",
     "node-fetch": "^2.6.1",
