chore: apply prettier

--- a/packages/notion-nextjs/package.json
+++ b/packages/notion-nextjs/package.json
@@ -23,6 +23,7 @@
     "test": "run-s test:*",
     "test:lint": "eslint .",
     "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check",
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write",
     "posttest": "run-s build"
   },
   "dependencies": {
