--- a/packages/notion-nextjs/package.json
+++ b/packages/notion-nextjs/package.json
@@ -30,13 +30,16 @@
     "@google-cloud/firestore": "^4.10.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
+    "eth-hooks": "^3.4.1",
     "ethers": "^5.5.3",
     "fathom-client": "^3.0.0",
     "got": "^11.8.2",
     "isomorphic-unfetch": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "ky": "^0.28.7",
     "lqip-modern": "^1.2.0",
     "next": "^11.1.2",
+    "next-transpile-modules": "^9.0.0",
     "node-fetch": "^2.6.1",
     "notion-client": "^4.10.0",
     "notion-types": "^4.10.0",
@@ -51,7 +54,8 @@
     "react-static-tweets": "^0.5.3",
     "react-use": "^17.2.4",
     "static-tweets": "^0.5.3",
-    "use-dark-mode": "^2.3.1"
+    "use-dark-mode": "^2.3.1",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.2",
